--- a/css/backoffice/components/dashlet/_dashlet.scss
+++ b/css/backoffice/components/dashlet/_dashlet.scss
@@ -11,6 +11,7 @@ $ibo-dashlet--elements-spacing-y: 24px !default;
 
 /* Rules */
 .ibo-dashlet {
+  position: relative;
   width: calc(#{$ibo-dashlet--width} - #{$ibo-dashlet--elements-spacing-x});
   margin: calc(#{$ibo-dashlet--elements-spacing-y} / 2) calc(#{$ibo-dashlet--elements-spacing-x} / 2);
 
