--- a/templates/base/components/datatable/layout.ready.js.twig
+++ b/templates/base/components/datatable/layout.ready.js.twig
@@ -28,6 +28,8 @@ var oTable{{ sListIDForVarSuffix }} = $('#{{ oUIBlock.GetId() }}').DataTable({
         infoEmpty: "{{ 'UI:Datatables:Language:InfoEmpty'|dict_s }}",
         infoFiltered: "({{ 'UI:Datatables:Language:InfoFiltered'|dict_s }})",
         emptyTable: "{{ 'UI:Datatables:Language:EmptyTable'|dict_s }}",
+        errorMessage: "{{ 'UI:RunQuery:Error'|dict_s }}",
+        buttonOk: "{{ 'UI:Button:Ok' |dict_s }}",
         paginate: {
             first: "<i class=\"fas fa-angle-double-left\"></i>",
             previous: "<i class=\"fas fa-angle-left\"></i>",
