--- a/templates/base/layouts/activity-panel/activity-entry/layout.html.twig
+++ b/templates/base/layouts/activity-panel/activity-entry/layout.html.twig
@@ -1,8 +1,10 @@
+{% spaceless %}
 <div class="ibo-activity-entry {% if oUIBlock.IsFromCurrentUser() %}ibo-is-current-user{% endif %} {% block iboActivityEntryExtraClasses %}{% endblock %}"
      data-role="ibo-activity-entry"
      data-entry-type="{% block iboActivityEntryType %}{{ oUIBlock.GetType() }}{% endblock %}"
      data-entry-datetime-raw="{{ oUIBlock.GetRawDateTime() }}"
 	 data-entry-author-login="{{ oUIBlock.GetAuthorLogin() }}"
+     data-entry-origin="{{ oUIBlock.GetOrigin() }}"
 	 {% block iboActivityEntryExtraDataAttributes %}{% endblock %}>
 	<div class="ibo-activity-entry--medallion {% if oUIBlock.GetAuthorPictureAbsUrl() is not empty %}ibo-has-image{% endif %}" data-role="ibo-activity-entry--medallion" data-tooltip-content="{{ oUIBlock.GetAuthorFriendlyname() }}">
 		{% block iboActivityEntryMedallion %}
@@ -33,9 +35,7 @@
 			<div class="ibo-activity-entry--sub-information" data-role="ibo-activity-entry--sub-information">
 				{% block iboActivityEntrySubInformation %}
                     {% if get_config_parameter('activity_panel.show_author_name_below_entries') %}
-                        <span class="ibo-activity-entry--author-name ibo-is-hidden" data-role="ibo-activity-entry--author-name">
-                            {{ oUIBlock.GetAuthorFriendlyname() }}
-                        </span>
+                        <span class="ibo-activity-entry--author-name ibo-is-hidden" data-role="ibo-activity-entry--author-name">{{ oUIBlock.GetAuthorFriendlyname() }}</span>
                     {% endif %}
                     <span class="ibo-activity-entry--datetime" data-role="ibo-activity-entry--datetime"
                           data-tooltip-content="{{ oUIBlock.GetFormattedDateTime() }}"
@@ -46,3 +46,4 @@
 		{% endblock %}
 	</div>
 </div>
+{% endspaceless %}
