N°3685 Greatly optimize SCSS rules to reduce compiled CSS file size (4.7Mo -> 620ko)

--- a/css/backoffice/application/display-block/_block-csv.scss
+++ b/css/backoffice/application/display-block/_block-csv.scss
@@ -11,7 +11,5 @@ $ibo-block-csv--textarea--margin-top: 10px !default;
 }
 
 .ibo-block-csv--download-link{
-  @extend .ibo-button;
-  @extend .ibo-is-alternative;
-  @extend .ibo-is-primary;
+  @extend .ibo-button.ibo-is-alternative.ibo-is-primary;
 }
