--- a/css/backoffice/components/input/_input-datetime.scss
+++ b/css/backoffice/components/input/_input-datetime.scss
@@ -25,9 +25,7 @@ $ibo-input-datetime--ui-tpicker-slider--padding-right: 18px !default;
 	color: $ibo-input-datetime--action-button--color;
 }
 .ui-datepicker-current, .ui-datepicker-close{
-	@extend .ibo-button;
-	@extend .ibo-is-regular;
-	@extend .ibo-is-secondary;
+	@extend .ibo-button.ibo-is-regular.ibo-is-secondary;
 }
 .ui_tpicker_hour_slider, .ui_tpicker_minute_slider, .ui_tpicker_second_slider{
 	@extend .ibo-input-wrapper;
