--- a/css/backoffice/layout/dashboard/_dashboard-editor.scss
+++ b/css/backoffice/layout/dashboard/_dashboard-editor.scss
@@ -100,9 +100,7 @@ $ibo-dashboard-editor--delete-dashlet-icon--z-index: 21 !default;
 	right: $ibo-dashboard-editor--delete-dashlet-icon--right;
 	padding: $ibo-dashboard-editor--delete-dashlet-icon--padding;
 	z-index: $ibo-dashboard-editor--delete-dashlet-icon--z-index;
-	@extend .ibo-button;
-	@extend .ibo-is-alternative;
-	@extend .ibo-is-danger;
+	@extend .ibo-button.ibo-is-alternative.ibo-is-danger;
 }
 .ibo-dashboard-editor .itop-dashboard{
   a{
