--- a/templates/base/components/datatable/static/layout.ready.js.twig
+++ b/templates/base/components/datatable/static/layout.ready.js.twig
@@ -58,15 +58,25 @@ var oTable{{ sListIDForVarSuffix }} = $('#{{ oUIBlock.GetId() }}').DataTable({
     ],
     drawCallback: function () {
         // Hiding pagination if only one page
-        if ($(this).closest('.dataTables_wrapper').find('.dataTables_paginate:last .paginate_button:not(.previous):not(.next)').length < 2) {
+        if ($(this).closest('.dataTables_wrapper').find('.dataTables_paginate:last .paginate_button:not(.previous):not(.next)').length < 2)
+        {
             $(this).closest('.dataTables_wrapper').find('.dataTables_paginate, .dataTables_info').hide();
-        } else {
+        }
+        else
+        {
             $(this).closest('.dataTables_wrapper').find('.dataTables_paginate, .dataTables_info').show();
+        }
+    },
+    initComplete: function () {
+        if (this.api().page.info().pages < 2)
+        {
+            this.closest('.dataTables_wrapper').find('.dataTables_length').hide();
         }
     }
 });
 
-if(window.ResizeObserver){
+if (window.ResizeObserver)
+{
     let oStaticTable{{ sListIDForVarSuffix }}ResizeTimeout = null;
     const oStaticTable{{ sListIDForVarSuffix }}Resize = new ResizeObserver(function(){
         clearTimeout(oStaticTable{{ sListIDForVarSuffix }}ResizeTimeout);
