N°3592 - Remove part of 146a95bae as it was unnecessary

--- a/templates/base/components/input/layout.html.twig
+++ b/templates/base/components/input/layout.html.twig
@@ -12,4 +12,5 @@
                 {% endfor %}
             {% endif %}
             {% if oUIBlock.GetPlaceHolder() %}  placeholder="{{ oUIBlock.GetPlaceHolder() }}" {% endif %}
-    >{% endblock %}
+    >
+{% endblock %}
