N°3800 Fix HTML content display for table borders and code color

--- a/css/backoffice/utils/helpers/_misc.scss
+++ b/css/backoffice/utils/helpers/_misc.scss
@@ -148,7 +148,12 @@ body.ibo-has-fullscreen-descendant {
  */
 .ibo-is-html-content {
   @extend .content;
+
+  code {
+    color: initial;
+  }
 }
+
 
 /***********************************************************************/
 /* Sticky headers                                                      */
