N°3918 - Restore style on broken wiki links (also add a tooltip to explain what it means)

--- a/css/backoffice/utils/helpers/_misc.scss
+++ b/css/backoffice/utils/helpers/_misc.scss
@@ -136,6 +136,11 @@ body.ibo-has-fullscreen-descendant {
   }
 }
 
+.ibo-is-broken-hyperlink {
+  text-decoration: line-through;
+  cursor: help;
+}
+
 .ibo-is-code {
   background-color: $ibo-is-code--background-color;
   padding: $ibo-is-code--padding;
