--- a/css/setup.css
+++ b/css/setup.css
@@ -17747,3 +17747,11 @@ body {
 #installation_progress {
   display: none;
 }
+#fresh_content {
+  border: 0;
+  min-height: 300px;
+  min-width: 600px;
+  display: none;
+  margin-left: auto;
+  margin-right: auto;
+}
