--- a/css/setup.scss
+++ b/css/setup.scss
@@ -634,3 +634,11 @@ body {
   #installation_progress {
     display: none;
   }
+  #fresh_content{
+    border: 0;
+    min-height: 300px;
+    min-width: 600px;
+    display:none;
+    margin-left: auto;
+    margin-right: auto;
+  }
