N°3750 - Behat: Add metadata about logs label

--- a/templates/base/layouts/activity-panel/caselog-entry-form/layout.html.twig
+++ b/templates/base/layouts/activity-panel/caselog-entry-form/layout.html.twig
@@ -5,6 +5,7 @@
       data-object-class="{{ oUIBlock.GetObjectClass() }}"
       data-object-id="{{ oUIBlock.GetObjectId() }}"
       data-attribute-code="{{ oUIBlock.GetAttCode() }}"
+      data-attribute-label="{{ oUIBlock.GetAttLabel() }}"
       data-submit-mode="{{ oUIBlock.GetSubmitMode() }}"
       method="post">
     <div class="ibo-caselog-entry-form--actions">
