--- a/css/backoffice/components/input/_input-select.scss
+++ b/css/backoffice/components/input/_input-select.scss
@@ -34,6 +34,11 @@ $ibo-input-select--select-wrapper--action-button--margin-right: 20px !default;
 $ibo-input-select--action-button--padding-left: 6px !default;
 $ibo-input-select--action-button--padding-right: 2px !default;
 
+$ibo-select--autocomplete-item-image--size: 25px !default;
+$ibo-select--autocomplete-item-image--margin-right: 0.5rem !default;
+$ibo-select--autocomplete-item-image--background-color: $ibo-color-blue-100 !default;
+$ibo-select--autocomplete-item-image--border: 1px solid $ibo-color-grey-600 !default;
+
 .ibo-input-select {
   display: inline-block;
   min-width: $ibo-input-select--value--min-midth;
@@ -164,8 +169,35 @@ $ibo-input-select--action-button--padding-right: 2px !default;
   max-height: $ibo-input-select-selectize--dropdown--max-height;
   overflow-y: auto;
 }
+
 .selectize-dropdown.ui-menu .ui-state-active {
-	margin: unset;
-	background-color: #f5fafd;
-	color: #495c68;
+  margin: unset;
+  background-color: #f5fafd;
+  color: #495c68;
+}
+
+.ibo-select--autocomplete-item {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+.ibo-select--autocomplete-item-image {
+  width: $ibo-select--autocomplete-item-image--size;
+  height: $ibo-select--autocomplete-item-image--size;
+  /* min-xxx are here to avoid medallion to be horizontally compressed when the title is to long */
+  min-width: $ibo-select--autocomplete-item-image--size;
+  min-height: $ibo-select--autocomplete-item-image--size;
+  background-position: center center;
+  background-size: 100%;
+  border-radius: 100%;
+  margin-right: $ibo-select--autocomplete-item-image--margin-right;
+  background-color: $ibo-select--autocomplete-item-image--background-color;
+  border: $ibo-select--autocomplete-item-image--border;
+
+  @extend %ibo-fully-centered-content;
+}
+
+.ibo-select--autocomplete-item-txt {
+  white-space: nowrap;
 }
