:bug: scss reference was in bulma not in iTop scss

--- a/css/backoffice/utils/helpers/_misc.scss
+++ b/css/backoffice/utils/helpers/_misc.scss
@@ -152,7 +152,7 @@ body.ibo-has-fullscreen-descendant {
  * See https://bulma.io/documentation/elements/content/
  */
 .ibo-is-html-content {
-  /* @extend .content; */
+  @extend .content;
 
   code {
     color: initial;
