--- a/css/setup.scss
+++ b/css/setup.scss
@@ -583,6 +583,11 @@ body {
     }
   }
 }
+.setup-extension--icon{
+  margin-right: 5px;
+  color: $ibo-color-blue-700;
+  font-size: $ibo-font-size-200;
+}
 /* integrityCheck: end (do not remove/edit) */
 
 /* Legacy inline stuff */
