--- a/templates/base/layouts/activity-panel/activity-entry/layout.html.twig
+++ b/templates/base/layouts/activity-panel/activity-entry/layout.html.twig
@@ -34,11 +34,17 @@
 			</div>
 			<div class="ibo-activity-entry--sub-information" data-role="ibo-activity-entry--sub-information">
 				{% block iboActivityEntrySubInformation %}
+                    {% if oUIBlock.GetOrigin() is not null and oUIBlock.GetOrigin != constant('Combodo\\iTop\\Core\\CMDBChange\\CMDBChangeOrigin::INTERACTIVE') %}
+                        <span class="ibo-activity-entry--origin" data-role="ibo-activity-entry--origin" data-tooltip-content="{{ ('Class:CMDBChange/Attribute:origin/Value:' ~ oUIBlock.GetOrigin())|dict_s }}" data-tooltip-placement="bottom">
+                            <span class="{{ oUIBlock.GetOriginDecorationClasses() }}"></span>
+                        </span>
+                    {% endif %}
                     {% if get_config_parameter('activity_panel.show_author_name_below_entries') %}
                         <span class="ibo-activity-entry--author-name ibo-is-hidden" data-role="ibo-activity-entry--author-name">{{ oUIBlock.GetAuthorFriendlyname() }}</span>
                     {% endif %}
                     <span class="ibo-activity-entry--datetime" data-role="ibo-activity-entry--datetime"
                           data-tooltip-content="{{ oUIBlock.GetFormattedDateTime() }}"
+                          data-tooltip-placement="bottom"
                           data-raw-datetime="{{ oUIBlock.GetRawDateTime() }}"
                           data-formatted-datetime="{{ oUIBlock.GetFormattedDateTime() }}">{{ oUIBlock.GetFormattedDateTime() }}</span>
                 {% endblock %}
