--- a/css/backoffice/layout/tab-container/_tab-container.scss
+++ b/css/backoffice/layout/tab-container/_tab-container.scss
@@ -65,7 +65,7 @@ $ibo-tab--temporary-remote-content--button--hover--color: $ibo-color-grey-200 !d
 
   color: $ibo-tab-container--tab-header--text-color;
 
-  &:hover {
+  &:hover:not(.ui-state-disabled) {
     color: $ibo-tab-container--tab-header--text-color--on-hover;
     background-color: $ibo-tab-container--tab-header--background-color--on-hover;
   }
