N°3928 Migrate impact analysis page to 3.0 style

--- a/css/backoffice/pages/_impact-analysis.scss
+++ b/css/backoffice/pages/_impact-analysis.scss
@@ -10,6 +10,7 @@ $ibo-simple-graph--grouping-threshold-additional-context--container--margin-righ
 $ibo-simple-graph--grouping-threshold-additional-context--content--margin-right: 1em !default;
 
 $ibo-impact-analysis--graph-zoom-slider--width: 10em !default;
+$ibo-impact-analysis--impacted-objects-lists--div--margin-top: 24px !default;
 
 $ibo-display-graph--search-box--criterion--content--padding-y: 0 !default;
 $ibo-display-graph--search-box--criterion--content--padding-x: 15px !default;
@@ -108,4 +109,12 @@ $ibo-display-graph--search-box--criterion--content--checkbox--margin-right: 10px
   #ReloadMovieBtn {
     align-self: flex-end;
   }
+}
+#impacted_objects_lists{
+  > div ~ div{
+    margin-top: $ibo-impact-analysis--impacted-objects-lists--div--margin-top;
+  }
+}
+#impacted_objects_lists_placeholder, #impacted_groups_placeholder{
+  height: 250px;
 }
