N°4182 Large own caselog entries were not scrolling in activity panel

--- a/css/backoffice/layout/activity-panel/_activity-entry.scss
+++ b/css/backoffice/layout/activity-panel/_activity-entry.scss
@@ -94,6 +94,7 @@ $ibo-activity-panel--load-all-entries--is-hover--margin-left: ($ibo-activity-pan
 	/* Current or not user specificities */
 	&.ibo-is-current-user{
 		flex-direction: row-reverse;
+    min-width: max-content;
 
 		.ibo-activity-entry--medallion{
 			margin-right: initial;
