--- a/css/backoffice/utils/helpers/_class-icon.scss
+++ b/css/backoffice/utils/helpers/_class-icon.scss
@@ -1,17 +1,21 @@
+$ibo-class-icon--small--size: 32px !default;
+$ibo-class-icon--medium--size: 48px !default;
+$ibo-class-icon--large--size: 64px !default;
+
 .ibo-class-icon{
   &.ibo-is-small{
-    width: 32px;
-    min-width: 32px;
-    max-height: 32px;
+    width: $ibo-class-icon--small--size;
+    min-width: $ibo-class-icon--small--size;
+    max-height: $ibo-class-icon--small--size;
   }
   &.ibo-is-medium{
-    width: 48px;
-    min-width: 48px;
-    max-height: 48px;
+    width: $ibo-class-icon--medium--size;
+    min-width: $ibo-class-icon--medium--size;
+    max-height: $ibo-class-icon--medium--size;
   }
   &.ibo-is-large{
-    width: 64px;
-    min-width: 64px;
-    max-height: 64px;
+    width: $ibo-class-icon--large--size;
+    min-width: $ibo-class-icon--large--size;
+    max-height: $ibo-class-icon--large--size;
   }
 } 
